--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -10,5 +10,14 @@
         android:name="com.d3if2070.hitungbmi.ui.HitungFragment"
         android:label="HitungFragment"
         tools:layout="@layout/fragment_hitung"
-        />
+        >
+        <action
+            android:id="@+id/action_hitungFragment_to_saranFragment"
+            app:destination="@id/saranFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/saranFragment"
+        android:name="com.d3if2070.hitungbmi.ui.SaranFragment"
+        android:label="SaranFragment"
+        tools:layout="@layout/fragment_saran"/>
 </navigation>
