Mengirim data saat bernavigasi

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -19,5 +19,9 @@
         android:id="@+id/saranFragment"
         android:name="com.d3if2070.hitungbmi.ui.SaranFragment"
         android:label="SaranFragment"
-        tools:layout="@layout/fragment_saran"/>
+        tools:layout="@layout/fragment_saran">
+        <argument
+            android:name="kategori"
+            app:argType="com.d3if2070.hitungbmi.data.KategoriBmi" />
+    </fragment>
 </navigation>
