--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_hitungFragment_to_saranFragment"
             app:destination="@id/saranFragment" />
+        <action
+            android:id="@+id/action_hitungFragment_to_aboutFragment"
+            app:destination="@id/aboutFragment" />
     </fragment>
     <fragment
         android:id="@+id/saranFragment"
@@ -24,4 +27,10 @@
             android:name="kategori"
             app:argType="com.d3if2070.hitungbmi.data.KategoriBmi" />
     </fragment>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.d3if2070.hitungbmi.ui.AboutFragment"
+        tools:layout="@layout/fragment_about"
+        android:label="@string/tentang_aplikasi" />
+
 </navigation>
